# terminal-draw-graph

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  evaluator.c  evaluator.h  main.c  parser.c  parser.h
datatypes/: list.c  list.h  types.h  unit.c  unit.h
